--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
             <nav class="header__nav d-flex">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Мои работы</a></li>
+                    <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
+    </header>
+    <main>
         <div class="container hero">
             <div class="header__socials">
-                <a href="#" class="socials__item"><img src="./img/vk.svg" alt="icon: vk"></a>
-                <a href="#" class="socials__item"><img src="./img/instagram.svg" alt="icon: instagram"></a>
-                <a href="#" class="socials__item"><img src="./img/telegram.svg" alt="icon: telegram"></a>
+                <a href="https://vk.com/kaidarka2020" class="socials__item"><img src="./img/vk.svg" alt="icon: vk"></a>
+                <a href="https://www.instagram.com/kaidarov_p/" class="socials__item"><img src="./img/instagram.svg" alt="icon: instagram"></a>
+                <a href="https://t.me/kaidarka" class="socials__item"><img src="./img/telegram.svg" alt="icon: telegram"></a>
             </div>
             <img class="header__avatar" src="./img/avatar.png" alt="image: avatar">
             <div class="header__text">
                 <h1 class="header__title">Кайдаров Павел</h1>
-                <h2 class="header__subtitle">Web-разработчик</h2>
+                <h2 class="header__subtitle"><span>Web</span>-разработчик</h2>
             </div>
         </div>
-        
-
-    </header>
+    </main>
 </body>
 </html>
