--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container d-flex justify-content-between">
+        <div class="container  header-container d-flex justify-content-between">
             <a class="logo-link" href="#">
-                <img  src="./img/header-logo.svg" alt="logo: WebDev" class="logo-img">
+                <img  src="./img/logo.png" alt="logo: WebDev" class="logo-img">
             </a>
-            <div id="header__burger" class="header__burger d-none">
+            <div id="header__burger" class="header__burger">
                 <span></span>
             </div>
-            <nav class="header__nav d-flex">
+            <nav class="header__nav d-none d-md-flex">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
                     <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
