--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container header-container d-flex justify-content-between">
             <a class="logo-link" href="#">
-                <img  src="./img/header-logo.svg" alt="logo: WebDev" class="logo-img">
+                <img src="./img/logo.png" alt="logo: WebDev" class="logo-img">
             </a>
             <div id="header__burger" class="header__burger d-none">
                 <span></span>
@@ -31,17 +31,6 @@
     <main>
         <div class="container works">
             <div class="cards">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-text">
-                            <h3>Сайт строительной компании</h3>
-                        </div>
-                        <div class="card-buttons">
-                            <a style="--i:1;"  class="card-button">Подробнее</a>
-                            <a style="--i:2;" href="https://skm-spb.ru/" class="card-button">Смотреть</a>
-                        </div>
-                    </div>
-                </div>
                 <div class="card">
                     <div class="card-content">
                         <div class="card-text">
