--- a/works.html
+++ b/works.html
@@ -12,17 +12,17 @@
 </head>
 <body>
     <header class="header">
-        <div class="container header-container d-flex justify-content-between">
+        <div class="container  header-container d-flex justify-content-between">
             <a class="logo-link" href="#">
-                <img src="./img/logo.png" alt="logo: WebDev" class="logo-img">
+                <img  src="./img/logo.png" alt="logo: WebDev" class="logo-img">
             </a>
-            <div id="header__burger" class="header__burger d-none">
+            <div id="header__burger" class="header__burger">
                 <span></span>
             </div>
-            <nav class="header__nav d-flex">
+            <nav class="header__nav d-none d-md-flex">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="index.html" class="nav__link">Главная</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Мои работы</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
+                    <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
     <main>
         <div class="container works">
             <div class="cards">
-                <div class="card">
+                <div class="card card-1">
                     <div class="card-content">
                         <div class="card-text">
                             <h3>Сайт строительной компании</h3>
@@ -42,25 +42,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card card-2">
                     <div class="card-content">
                         <div class="card-text">
-                            <h3>Сайт строительной компании</h3>
+                            <h3>Интернет магазин</h3>
                         </div>
                         <div class="card-buttons">
                             <a style="--i:1;"  class="card-button">Подробнее</a>
-                            <a style="--i:2;" href="https://skm-spb.ru/" class="card-button">Смотреть</a>
+                            <a style="--i:2;" href="https://kaidarka.github.io/willdberries/" class="card-button">Смотреть</a>
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card card-3">
                     <div class="card-content">
                         <div class="card-text">
-                            <h3>Сайт строительной компании</h3>
+                            <h3>Cайт IT компании</h3>
                         </div>
                         <div class="card-buttons">
                             <a style="--i:1;"  class="card-button">Подробнее</a>
-                            <a style="--i:2;" href="https://skm-spb.ru/" class="card-button">Смотреть</a>
+                            <a style="--i:2;" href="https://kaidarka.github.io/it/" class="card-button">Смотреть</a>
                         </div>
                     </div>
                 </div>
