--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container  header-container d-flex justify-content-between">
-            <a class="logo-link" href="#">
+            <a class="logo-link" href="">
                 <img  src="./img/logo.png" alt="logo: WebDev" class="logo-img">
             </a>
             <div id="header__burger" class="header__burger">
@@ -21,9 +21,8 @@
             </div>
             <nav class="header__nav d-none d-md-flex">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">Главная</a></li>
                     <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +30,7 @@
     <main>
         <div class="container hero">
             <div class="header__socials">
-                <a href="https://vk.com/kaidarka2020" class="socials__item"><img src="./img/vk.svg" alt="icon: vk"></a>
+                <a href="https://vk.com/kaidarka" class="socials__item"><img src="./img/vk.svg" alt="icon: vk"></a>
                 <a href="https://www.instagram.com/kaidarov_p/" class="socials__item"><img src="./img/instagram.svg" alt="icon: instagram"></a>
                 <a href="https://t.me/kaidarka" class="socials__item"><img src="./img/telegram.svg" alt="icon: telegram"></a>
             </div>
