--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container  header-container d-flex justify-content-between">
-            <a class="logo-link" href="#">
+            <a class="logo-link" href="index.html">
                 <img  src="./img/logo.png" alt="logo: WebDev" class="logo-img">
             </a>
             <div id="header__burger" class="header__burger">
@@ -21,9 +21,8 @@
             </div>
             <nav class="header__nav d-none d-md-flex">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
-                    <li class="nav__item"><a href="works.html" class="nav__link">Мои работы</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+                    <li class="nav__item"><a href="index.html" class="nav__link">Главная</a></li>
+                    <li class="nav__item"><a href="" class="nav__link">Мои работы</a></li>
                 </ul>
             </nav>
         </div>
